--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -8,20 +8,19 @@
   }
 
   .qmultiselect.solid-select-container {
-  @apply my-3
-}
-.qmultiselect .solid-select-control {
-  @apply py-3 text-gray-700 bg-white border rounded-lg dark:bg-gray-900 dark:border-gray-600 focus:border-blue-400 dark:focus:border-blue-300 focus:ring-blue-300 focus:outline-none focus:ring focus:ring-opacity-40
-}
-.qmultiselect .solid-select-placeholder {
-  @apply text-gray-700 dark:text-gray-300
-}
-.qmultiselect .solid-select-option:hover {
-  @apply dark:text-white dark:bg-gray-900
-}
+    @apply my-3;
+  }
+  .qmultiselect .solid-select-control {
+    @apply py-3 text-gray-700 bg-white border rounded-lg dark:bg-gray-900 dark:border-gray-600 focus:border-blue-400 dark:focus:border-blue-300 focus:ring-blue-300 focus:outline-none focus:ring focus:ring-opacity-40;
+  }
+  .qmultiselect .solid-select-placeholder {
+    @apply text-gray-700 dark:text-gray-300;
+  }
+  .qmultiselect .solid-select-option:hover {
+    @apply dark:text-white dark:bg-gray-900;
+  }
 
-.qmultiselect .solid-select-option {
-  @apply bg-gray-50 dark:bg-gray-700 dark:text-gray-200
-}
-
+  .qmultiselect .solid-select-option {
+    @apply bg-gray-50 dark:bg-gray-700 dark:text-gray-200;
+  }
 }
